Fix make target, spelling, version bump

--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
     "update_url": "https://clients2.google.com/service/update2/crx",
     "manifest_version": 2,
     "name": "GTFOutside",
-    "description": "Hides 'rode on Zwift' activities on Strava.",
-    "version": "0.5.1",
+    "description": "Hides Zwift/TrainerRoad/trainer activities on Strava.",
+    "version": "0.5.3",
     "author": "Jason Friedland <jason@friedland.id.au>",
     "content_scripts": [
         {
